@@ -9,150 +9,199 @@ import com.Atividade.InovaEmpresa.entities.EventoEntity;
 import com.Atividade.InovaEmpresa.entities.IdeiaEntity;
 import com.Atividade.InovaEmpresa.entities.UsuarioEntity;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.test.mock.mockito.SpyBean;
 
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @SpringBootTest
-public class AvaliacaoPopularServiceTest {
+class AvaliacaoPopularServiceTest {
+
+    @SpyBean
+    private AvaliacaoPopularService avaliacaoPopularService;
 
     @MockBean
-    AvaliacaoPopularRepository avaliacaoPopularRepository;
+    private AvaliacaoPopularRepository avaliacaoPopularRepository;
 
     @MockBean
-    UsuarioRepository usuarioRepository;
+    private UsuarioRepository usuarioRepository;
 
     @MockBean
-    IdeiaRepository ideiaRepository;
+    private IdeiaRepository ideiaRepository;
 
     @MockBean
-    EventoRepository eventoRepository;
-
-    @Autowired
-    AvaliacaoPopularService service;
+    private EventoRepository eventoRepository;
 
     @Test
-    public void testVotar_WithActiveEventAndIdeia() {
+    void testVotarSuccess() {
         Long ideiaId = 1L;
         Long usuarioId = 1L;
-        Instant now = Instant.now();
-        EventoEntity evento = new EventoEntity();
-        evento.setDataAvaliacaoPopular(now);
-        IdeiaEntity ideia = new IdeiaEntity();
-        ideia.setEvento(evento);
+        Instant atual = Instant.now();
+
         UsuarioEntity usuario = new UsuarioEntity();
+        IdeiaEntity ideia = new IdeiaEntity();
+        EventoEntity evento = new EventoEntity();
+        evento.setDataAvaliacaoPopular(atual.minusSeconds(3600)); // Set to 1 hour ago
+        ideia.setEvento(evento);
+        ideia.setId(ideiaId);
 
         when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(usuario));
         when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(ideia));
-        when(eventoRepository.findEventoPopular(now)).thenReturn(Optional.of(evento));
-        when(ideiaRepository.findTop10ByJurados(evento.getId())).thenReturn(Arrays.asList(ideia));
+        when(eventoRepository.findEventoPopular(any(Instant.class))).thenReturn(Optional.of(evento));
+        when(ideiaRepository.findTop10ByJurados(evento.getId())).thenReturn(List.of(ideia));
         when(avaliacaoPopularRepository.findByUsuarioIdAndEventoId(usuarioId, evento.getId())).thenReturn(Optional.empty());
-        when(avaliacaoPopularRepository.save(any(AvaliacaoPopularEntity.class))).thenReturn(new AvaliacaoPopularEntity());
+        when(avaliacaoPopularRepository.save(any(AvaliacaoPopularEntity.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        AvaliacaoPopularEntity resultado = service.votar(ideiaId, usuarioId);
+        AvaliacaoPopularEntity result = avaliacaoPopularService.votar(ideiaId, usuarioId);
 
-        assertNotNull(resultado);
+        assertNotNull(result);
+        assertEquals(usuario, result.getUsuario());
+        assertEquals(ideia, result.getIdeia());
+        assertEquals(evento, result.getEvento());
     }
 
-////    @Test
-////    public void testVotar_WithNonExistentUsuario() {
-////        Long ideiaId = 1L;
-////        Long usuarioId = 1L;
-////        Instant now = Instant.now();
-////        EventoEntity evento = new EventoEntity();
-////        evento.setDataAvaliacaoPopular(now);
-////        IdeiaEntity ideia = new IdeiaEntity();
-////        ideia.setEvento(evento);
-////
-////        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.empty());
-////        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(ideia));
-////        when(eventoRepository.findEventoPopular(now)).thenReturn(Optional.of(evento));
-////
-////        AvaliacaoPopularEntity resultado = service.votar(ideiaId, usuarioId);
-////
-////        assertNull(resultado);
-////    }
-////
-////    @Test
-////    public void testVotar_WithNonExistentIdeia() {
-////        Long ideiaId = 1L;
-////        Long usuarioId = 1L;
-////        Instant now = Instant.now();
-////
-////        UsuarioEntity usuario = new UsuarioEntity();
-////        usuario.setId(usuarioId);
-////
-////        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(usuario));
-////        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.empty());
-////        when(eventoRepository.findEventoPopular(now)).thenReturn(Optional.of(new EventoEntity()));
-////
-////        AvaliacaoPopularEntity resultado = service.votar(ideiaId, usuarioId);
-////
-////        assertNull(resultado);
-////    }
-////
-////
-////    @Test
-////    public void testVotar_WithNonActiveEvent() {
-////        Long ideiaId = 1L;
-////        Long usuarioId = 1L;
-////        Instant now = Instant.now();
-////        EventoEntity evento = new EventoEntity();
-////        evento.setDataAvaliacaoPopular(now.plusSeconds(3600));
-////        IdeiaEntity ideia = new IdeiaEntity();
-////        ideia.setEvento(evento);
-////        UsuarioEntity usuario = new UsuarioEntity();
-////
-////        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(usuario));
-////        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(ideia));
-////        when(eventoRepository.findEventoPopular(now)).thenReturn(Optional.of(evento));
-////
-////        AvaliacaoPopularEntity resultado = service.votar(ideiaId, usuarioId);
-////
-////        assertNull(resultado);
-////    }
-////
-////    @Test
-////    public void testVotar_WithUserAlreadyVoted() {
-////        Long ideiaId = 1L;
-////        Long usuarioId = 1L;
-////        Instant now = Instant.now();
-////        EventoEntity evento = new EventoEntity();
-////        evento.setDataAvaliacaoPopular(now);
-////        IdeiaEntity ideia = new IdeiaEntity();
-////        ideia.setEvento(evento);
-////        UsuarioEntity usuario = new UsuarioEntity();
-////        AvaliacaoPopularEntity existingAvaliacao = new AvaliacaoPopularEntity();
-////
-////        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(usuario));
-////        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(ideia));
-////        when(eventoRepository.findEventoPopular(now)).thenReturn(Optional.of(evento));
-////        when(ideiaRepository.findTop10ByJurados(evento.getId())).thenReturn(Arrays.asList(ideia));
-////        when(avaliacaoPopularRepository.findByUsuarioIdAndEventoId(usuarioId, evento.getId())).thenReturn(Optional.of(existingAvaliacao));
-////
-////        AvaliacaoPopularEntity resultado = service.votar(ideiaId, usuarioId);
-////
-////        assertNull(resultado);
-//    }
+    @Test
+    void testVotarUsuarioNaoEncontrado() {
+        Long ideiaId = 1L;
+        Long usuarioId = 1L;
+
+        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.empty());
+
+        AvaliacaoPopularEntity result = avaliacaoPopularService.votar(ideiaId, usuarioId);
+
+        assertNotNull(result);
+        assertTrue(result.getId() == null);
+    }
 
     @Test
-    public void testFindById() {
+    void testVotarIdeiaNaoEncontrada() {
+        Long ideiaId = 1L;
+        Long usuarioId = 1L;
+
+        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(new UsuarioEntity()));
+        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.empty());
+
+        AvaliacaoPopularEntity result = avaliacaoPopularService.votar(ideiaId, usuarioId);
+
+        assertNotNull(result);
+        assertTrue(result.getId() == null);
+    }
+
+    @Test
+    void testVotarEventoNaoEncontrado() {
+        Long ideiaId = 1L;
+        Long usuarioId = 1L;
+
+        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(new UsuarioEntity()));
+        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(new IdeiaEntity()));
+        when(eventoRepository.findEventoPopular(any(Instant.class))).thenReturn(Optional.empty());
+
+        AvaliacaoPopularEntity result = avaliacaoPopularService.votar(ideiaId, usuarioId);
+
+        assertNotNull(result);
+        assertTrue(result.getId() == null);
+    }
+
+    @Test
+    void testVotarIdeiaNaoTop10() {
+        Long ideiaId = 1L;
+        Long usuarioId = 1L;
+        Instant atual = Instant.now();
+
+        UsuarioEntity usuario = new UsuarioEntity();
+        IdeiaEntity ideia = new IdeiaEntity();
+        EventoEntity evento = new EventoEntity();
+        ideia.setEvento(evento);
+        ideia.setId(ideiaId);
+
+        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(usuario));
+        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(ideia));
+        when(eventoRepository.findEventoPopular(any(Instant.class))).thenReturn(Optional.of(evento));
+        when(ideiaRepository.findTop10ByJurados(evento.getId())).thenReturn(List.of(new IdeiaEntity()));
+
+        AvaliacaoPopularEntity result = avaliacaoPopularService.votar(ideiaId, usuarioId);
+
+        assertNotNull(result);
+        assertTrue(result.getId() == null);
+    }
+
+    @Test
+    void testVotarForaDataPermitida() {
+        Long ideiaId = 1L;
+        Long usuarioId = 1L;
+        Instant atual = Instant.now();
+
+        UsuarioEntity usuario = new UsuarioEntity();
+        IdeiaEntity ideia = new IdeiaEntity();
+        EventoEntity evento = new EventoEntity();
+        evento.setDataAvaliacaoPopular(atual.plusSeconds(3600));
+        ideia.setEvento(evento);
+        ideia.setId(ideiaId);
+
+        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(usuario));
+        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(ideia));
+        when(eventoRepository.findEventoPopular(any(Instant.class))).thenReturn(Optional.of(evento));
+        when(ideiaRepository.findTop10ByJurados(evento.getId())).thenReturn(List.of(ideia));
+
+        AvaliacaoPopularEntity result = avaliacaoPopularService.votar(ideiaId, usuarioId);
+
+        assertNull(result);
+    }
+
+    @Test
+    void testVotarUsuarioJaVotou() {
+        Long ideiaId = 1L;
+        Long usuarioId = 1L;
+        Instant atual = Instant.now();
+
+        UsuarioEntity usuario = new UsuarioEntity();
+        IdeiaEntity ideia = new IdeiaEntity();
+        EventoEntity evento = new EventoEntity();
+        evento.setDataAvaliacaoPopular(atual.minusSeconds(3600));
+        ideia.setEvento(evento);
+        ideia.setId(ideiaId);
+
+        when(usuarioRepository.findById(usuarioId)).thenReturn(Optional.of(usuario));
+        when(ideiaRepository.findById(ideiaId)).thenReturn(Optional.of(ideia));
+        when(eventoRepository.findEventoPopular(any(Instant.class))).thenReturn(Optional.of(evento));
+        when(ideiaRepository.findTop10ByJurados(evento.getId())).thenReturn(List.of(ideia));
+        when(avaliacaoPopularRepository.findByUsuarioIdAndEventoId(usuarioId, evento.getId())).thenReturn(Optional.of(new AvaliacaoPopularEntity()));
+
+        AvaliacaoPopularEntity result = avaliacaoPopularService.votar(ideiaId, usuarioId);
+
+        assertNotNull(result);
+        assertTrue(result.getId() == null);
+    }
+
+    @Test
+    void testFindByIdSuccess() {
         Long id = 1L;
         AvaliacaoPopularEntity avaliacao = new AvaliacaoPopularEntity();
+        avaliacao.setId(id);
 
         when(avaliacaoPopularRepository.findById(id)).thenReturn(Optional.of(avaliacao));
 
-        AvaliacaoPopularEntity resultado = service.findById(id);
+        AvaliacaoPopularEntity result = avaliacaoPopularService.findById(id);
 
-        assertEquals(avaliacao, resultado);
+        assertNotNull(result);
+        assertEquals(id, result.getId());
+    }
+
+    @Test
+    void testFindByIdNotFound() {
+        Long id = 1L;
+
+        when(avaliacaoPopularRepository.findById(id)).thenReturn(Optional.empty());
+
+        AvaliacaoPopularEntity result = avaliacaoPopularService.findById(id);
+
+        assertNotNull(result);
+        assertTrue(result.getId() == null);
     }
 }
